recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  carre()
  droite(180.)
  carre()
  droite(180.)
  carre()
  droite(180.)
  carre()
  droite(90.)
}

def carre() {
  avance(100.)
  droite(90.)
  avance(100.)
  droite(90.)
  avance(100.)
  droite(90.)
  avance(100.)
}